fix stretch layout

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -79,7 +79,7 @@
 }
 @media (min-width: $tablet-break) {
   .about__title {
-    min-height: 445px;
+    min-height: 400px;
   }
 
   .about__preview {
