--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,9 @@
 @import "contest";
 
 .main {
-  background-color: $white;
+}
 
+.main_wrapper {
+  background-color: $white;
   @include container;
 }
